[package]
name = "serde_docs"
version = "0.0.0"
authors = ["David Tolnay <dtolnay@gmail.com>"]
publish = false

[dependencies]
erased-serde = "*"
serde = { version = "*", features = ["rc"] }
serde-transcode = "*"
serde_bytes = "*"
serde_derive = "*"
serde_json = "*"
serde_test = "*"
serde_yaml = "*"
